# gis-utils

./: .coveragerc  .flake8  .gitattributes  .gitignore  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  Readme.md  build-conda-package  pyproject.toml  requirements-dev.txt  requirements.txt  requirements.yml  setup.cfg  setup.py
.github/workflows/: build_docs.yaml  release.yml  tests.yaml
ci/: requirements.yml
docs/source/: conf.py  index.rst  release-history.rst
examples/: gis-utils_demo.ipynb
examples/data/: NHDPlus04_flowline.dbf  NHDPlus04_flowline.shp  NHDPlus04_flowline.shx  NHDPlus07_flowline.dbf  NHDPlus07_flowline.shp  NHDPlus07_flowline.shx  top.tif  top.tif.msk
gisutils/: __init__.py  _version.py  project.py  projection.py  raster.py  shapefile.py
gisutils/tests/: conftest.py  test_notebooks.py  test_project.py  test_projection.py  test_raster.py  test_shapefile.py
latest/: .buildinfo  genindex.html  index.html  installation.html  min_versions.html  objects.inv  py-modindex.html  release-history.html  search.html  searchindex.js  troubleshooting.html  usage.html
v0.3.1/: .buildinfo  installation.html  objects.inv  search.html  searchindex.js  usage.html
v0.3.2/: .buildinfo  installation.html  objects.inv  py-modindex.html  release-history.html  searchindex.js  usage.html
v0.3.3/: .buildinfo  genindex.html  index.html  installation.html  objects.inv  search.html  troubleshooting.html  usage.html
v0.3.4/: .buildinfo  index.html  release-history.html  troubleshooting.html
v0.3.5/: installation.html  py-modindex.html  searchindex.js  troubleshooting.html  usage.html
(+44 files in other folders)
