[build-system]
requires = [
    "setuptools >= 61",
    #"wheel"
    'tomli; python_version < "3.11"'
]
build-backend = "setuptools.build_meta"

[project]
name = "gis-utils"
dynamic = ["version"]
authors = [
    { name = "Andrew Leaf", email = "aleaf@usgs.gov" }
]
description = "Convenience functions for working with geospatial data in python. "
readme = "Readme.md"
keywords = ["GIS", "python", "hydrology"]
license = {file = "LICENSE.md"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Hydrology",
]
requires-python = ">=3.10"
dependencies = [
    "geopandas",
    "fiona",
    "matplotlib",
    "numpy",
    "pandas",
    "pyproj",
    "rasterio",
    "scipy",
    "shapely",
    "xarray",
]

[project.optional-dependencies]
optional = [
]
test = [
    "codecov",
    "coverage",
    "pytest",
    "pytest-timeout"
]
docs = [
    "matplotlib",
    "ipython[kernel]",
    "sphinx",
    "numpydoc",
    "nbsphinx",
    "sphinx-copybutton",
    "sphinx-rtd-theme"
]

[project.scripts]

[project.urls]
documentation = "https://aleaf.github.io/gis-utils/latest/"
repository = "https://github.com/aleaf/gis-utils"

[tool.setuptools.packages.find]
include = ["gisutils", "gisutils.*"]

[tool.versioneer]
VCS = "git"
style = "pep440-post"
versionfile_source = "gisutils/_version.py"
versionfile_build = "gisutils/_version.py"
tag_prefix = "v"
parentdir_prefix = "gisutils-"
